--- a/scrimba-js/styles.css
+++ b/scrimba-js/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
+    color: rgb(0, 15, 112);
 }
 
 h1 {
@@ -33,6 +34,6 @@ button {
 }
 
 #decrement-btn {
-    background: darkgreen;
+    background: rgb(18, 74, 165);
 }
 
