--- a/scrimba-js/styles.css
+++ b/scrimba-js/styles.css
@@ -1,10 +1,10 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1701600713610-0f724c65168d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-    background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
     color: rgb(0, 15, 112);
+    background-image: url("https://images.unsplash.com/photo-1701600713610-0f724c65168d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
 }
 
 h1 {
@@ -41,4 +41,8 @@ button {
 
 #save-btn{
     background-color: pink;
+}
+
+#reset-btn{
+    background: yellowgreen;
 }
