--- a/scrimba-js/styles.css
+++ b/scrimba-js/styles.css
@@ -2,9 +2,10 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
-    color: rgb(0, 15, 112);
+    color: rgb(34, 37, 54);
     background-image: url("https://images.unsplash.com/photo-1701600713610-0f724c65168d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
+    background-color: rgba(255, 255, 255, 0.532);
 }
 
 h1 {
@@ -45,4 +46,19 @@ button {
 
 #reset-btn{
     background: yellowgreen;
+}
+
+#container{
+    display: block;
+    margin-top: 50px;
+    align-items: center;
+}
+
+footer{
+    margin-top: 350px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
