--- a/scrimba-js/styles.css
+++ b/scrimba-js/styles.css
@@ -5,7 +5,7 @@ body {
     color: rgb(34, 37, 54);
     background-image: url("https://images.unsplash.com/photo-1701600713610-0f724c65168d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
-    background-color: rgba(255, 255, 255, 0.532);
+    height: 100vh;
 }
 
 h1 {
@@ -49,9 +49,8 @@ button {
 }
 
 #container{
-    display: block;
-    margin-top: 50px;
-    align-items: center;
+    max-width: 80%;
+    margin: auto;
 }
 
 footer{
