display results in DOM

--- a/black-jack/style.css
+++ b/black-jack/style.css
@@ -4,9 +4,11 @@ body {
     text-align: center;
     background-image: url("https://images.unsplash.com/photo-1601370690183-1c7796ecec61?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     font-family: 'Cairo Play', sans-serif;
+    background-size: cover;
     border: solid 1px white;
     border-radius: 30px;
     margin: 20px;
+    color: white;
 }
 
 h1 {
@@ -19,7 +21,15 @@ h1 {
 }
 
 p{
-    color: white;
     font-size: 25px;
     font-weight: bold;
+}
+
+button{
+    color: #016f32;
+    width: 150px;
+    background: goldenrod;
+    margin-bottom: 30px;
+    height: 30px;
+    border-radius: 30px;
 }
